--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
   aws-eks: circleci/aws-eks@0.2.6
 
 workflows:
-  deploy-to-staging-and-production:
+  deploy-to-production:
     jobs:
       - aws-ecr/build-and-push-image:
           account-url: AWS_ECR_ACCOUNT_URL
